--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,6 @@ a {
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #fff;
 }
 
@@ -97,8 +96,9 @@ a {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    display: none;
 }
-.content-tile {
+.content-title {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -114,10 +114,6 @@ a {
     color: #434455;
 }
 
-.hidden {
-    display: none;
-}
-
 .section-team {
 background: #f4f4fd;
 }
@@ -127,7 +123,6 @@ background: #f4f4fd;
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
 }
@@ -141,7 +136,6 @@ background: #f4f4fd;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #2e2f42;
 }
 .team-vacancy {
@@ -149,7 +143,6 @@ background: #f4f4fd;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #434455;
 }
 
@@ -158,7 +151,6 @@ background: #f4f4fd;
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
 }
