--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ a {
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
+    text-align: center;
     color: #fff;
 }
 
@@ -112,6 +113,7 @@ background: #f4f4fd;
     line-height: 1.11;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    text-align: center;
     text-transform: capitalize;
 }
 
@@ -140,6 +142,7 @@ background: #f4f4fd;
     line-height: 1.11;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    text-align: center;
     text-transform: capitalize;
 }
 
